# Smart-Snake

./: .gitignore  Makefile  PROJECT.md  README.md  pyproject.toml
src/smart_snake/: __init__.py  apple.py  engine.py  grid.py  multiplayer.py  snake.py
src/smart_snake.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/smart_snake/ai/: __init__.py  agent.py  benchmark.py  cli.py  config.py  difficulty.py  environment.py  model_manager.py  networks.py  parallel.py  replay_buffer.py  state.py  train.py
src/smart_snake/server/: __init__.py  app.py  game_manager.py  models.py  routes.py  websocket.py
tests/: test_ai_agent.py  test_ai_benchmark.py  test_ai_cli.py  test_ai_config.py  test_ai_difficulty.py  test_ai_environment.py  test_ai_model_manager.py  test_ai_networks.py  test_ai_parallel.py  test_ai_replay_buffer.py  test_ai_state.py  test_ai_train.py  test_api.py  test_apple.py  test_engine.py  test_grid.py  test_load.py  test_multiplayer.py  test_snake.py  test_websocket.py
